createcustomgame-2 new options panel | close #13

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -690,6 +690,7 @@ input[type="checkbox"]:checked::after {
   color: var(--normal-text-color);
   background-color: rgba(0, 0, 0, 0.2);
   padding: 1ex;
+  cursor: pointer;
 }
 
 .account-page {
